test/Fail/Issue4399.err
Issue4399.agda:11.5: error: [ParseError]
Not a valid named argument: _ = tt
